package com.example.coroutineflow.crypto_app


data class Currency(
    val name: String,
    val price: Int,
)